haskell-serbia/.stack-work/logs/persistent-sqlite-2.6.2.log
Configuring persistent-sqlite-2.6.2...
Building persistent-sqlite-2.6.2...
Preprocessing library persistent-sqlite-2.6.2...
[1 of 2] Compiling Database.Sqlite  ( Database/Sqlite.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Database/Sqlite.o )
[2 of 2] Compiling Database.Persist.Sqlite ( Database/Persist/Sqlite.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Database/Persist/Sqlite.o )

cbits/sqlite3.c:18709:17: error:
     warning: 'OSAtomicCompareAndSwapPtrBarrier' is deprecated: first deprecated in macOS 10.12 - Use atomic_compare_exchange_strong() from <stdatomic.h> instead [-Wdeprecated-declarations]
          success = OSAtomicCompareAndSwapPtrBarrier(NULL, newzone, 
                    ^

/usr/include/libkern/OSAtomicDeprecated.h:547:6: error:
     note: 'OSAtomicCompareAndSwapPtrBarrier' has been explicitly marked deprecated here
bool    OSAtomicCompareAndSwapPtrBarrier( void *__oldValue, void *__newValue, void * volatile *__theValue );
        ^
1 warning generated.

cbits/sqlite3.c:18709:17: error:
     warning: 'OSAtomicCompareAndSwapPtrBarrier' is deprecated: first deprecated in macOS 10.12 - Use atomic_compare_exchange_strong() from <stdatomic.h> instead [-Wdeprecated-declarations]
          success = OSAtomicCompareAndSwapPtrBarrier(NULL, newzone, 
                    ^

/usr/include/libkern/OSAtomicDeprecated.h:547:6: error:
     note: 'OSAtomicCompareAndSwapPtrBarrier' has been explicitly marked deprecated here
bool    OSAtomicCompareAndSwapPtrBarrier( void *__oldValue, void *__newValue, void * volatile *__theValue );
        ^
1 warning generated.
Installing library in
/Users/v0d1ch/.stack/snapshots/x86_64-osx/lts-8.5/8.0.2/lib/x86_64-osx-ghc-8.0.2/persistent-sqlite-2.6.2-3usfgm0Af55IskJ0vlEsyg
Registering persistent-sqlite-2.6.2...
